<resources>
    <string name="exit">Exit</string>
    <string name="settings">Function Defaults</string>
    <string name="fb_label">Function Label</string>
    <string name="fb_column_label">Label</string>
    <string name="fb_column_function">Funct#</string>
    <string name="function_buttons">function_buttons</string>
    <string name="app_name">Engine Driver</string>
    <string name="app_description">Engine Driver - Throttle for your Android phone.  This application can connect to a JMRI, MRC or DigiTrax WiThrottle server, and in turn control your locomotives. Speed, direction, and up to 29 DCC functions are supported for one to six locomotives. </string>
    <string name="app_name_connect">Connect to Server - Engine Driver</string>
    <string name="app_name_throttle">Throttle - Engine Driver</string>
    <string name="app_name_throttle_short">Throttle</string>
    <string name="app_name_power_control">Power Control - Engine Driver</string>
    <string name="app_name_reconnect_status">Reconnect Status - Engine Driver</string>
    <string name="app_name_routes">Routes - Engine Driver</string>
    <string name="app_name_turnouts">Turnouts - Engine Driver</string>
    <string name="app_name_about">About - Engine Driver</string>
    <string name="app_name_web">Web - Engine Driver</string>
    <string name="app_name_functions">Default Function Settings - Engine Driver</string>
    <string name="app_name_preferences">Preferences - Engine Driver</string>
    <string name="app_name_select_loco">Select/Release Loco - Engine Driver</string>
    <string name="app_name_ConsistEdit">Consist Edit - Engine Driver</string>
    <string name="app_name_ConsistLightsEdit">Consist Lights - Engine Driver</string>
    <string name="app_name_gamepad_test">Gamepad Test - Engine Driver</string>
    <string name="gamepad1_test">Gamepad 1 Test</string>
    <string name="gamepad2_test">Gamepad 2 Test</string>
    <string name="gamepad3_test">Gamepad 3 Test</string>
    <string name="notification_title">Engine Driver is running</string>
    <string name="notification_text">Tap to reopen Engine Driver</string>
    <string name="host_ip">Host Name or Address</string>
    <string name="port">Port</string>
    <string name="loco_address">Loco Address</string>
    <string name="connect_button">Connect</string>
    <string name="recent_connections">Recent Connections</string>
    <string name="select_loco_heading">Acquire Loco, Method - Throttle %1$s</string>
    <string name="select_loco">Enter Locomotive Address to Acquire</string>
    <string name="select_loco_address">Address</string>
    <string name="acquire_button">Acquire</string>
    <string name="roster_list">Select from Roster/Consist Entries</string>
    <string name="recent_engines">Select from Recent Locomotives</string>
    <string name="direction">Fwd</string>
    <string name="speed">Speed:</string>
    <string name="discovered_services">Discovered Servers</string>
    <string name="save_settings">Save Settings</string>
    <string name="stop">Stop</string>
    <string name="forward">Forward</string>
    <string name="reverse">Reverse</string>
    <string name="none">None</string>
    <string name="fb_helptext">Enter labels and function#s in list. Leave label blank to hide button. Used when roster functions are not available.</string>
    <string name="copy_function_labels">Copy Labels from Roster</string>
    <string name="fb_header">Edit Functions</string>
    <string name="fbResetFunctionLabels">Reset All</string>
    <string name="prefNumberOfDefaultFunctionLabelsTitle">Number of Default Functions</string>
    <string name="prefNumberOfDefaultFunctionLabelsSummary">Limit the Function Labels shown if not available from the JMRI roster.</string>
    <string name="prefNumberOfDefaultFunctionLabelsDefaultValue">29</string>
    <string name="prefNumberOfDefaultFunctionLabelsForRosterTitle">Number of Default Functions for Roster</string>
    <string name="prefNumberOfDefaultFunctionLabelsForRosterSummary">Limit the Function Labels shown for JMRI Roster Entries with no function Labels.</string>
    <string name="prefNumberOfDefaultFunctionLabelsForRosterDefaultValue">4</string>
    <string name="consist_help">Click an engine to change its direction with respect to the top of the consist.  Long press an engine to remove it from the consist.  Press Back Arrow when done.</string>
    <string name="about">About</string>
    <string name="web">Web</string>
    <string name="about_page_url">file:///android_asset/about_page.html</string>
    <string name="mrc_settings">MRC Settings</string>
    <string name="loco">Loco:</string>
    <string name="loco_direction_left_extra">"\u00B7F\u00B7"</string>
    <string name="loco_direction_right_extra">"\u00B7R\u00B7"</string>
    <string name="locoPressToSelect">Select</string>
    <string name="powerWillNotWorkTitle">Will Not Work!</string>
    <string name="powerWillNotWork">JMRI has the wiThrottle power control setting to off.\nWill now remove Power Icon.\nWill display again when JMRI setting is on.</string>
    <string name="current_locos">Currently Selected Locos</string>
    <string name="release">Release</string>
    <string name="releaseThrottleNumber">Release Throttle %1$s</string>
    <string name="releaseThrottleLocos">Release\n%1$s</string>
    <string name="turnouts">Turnouts</string>
    <string name="turnouts_label">Control Turnouts</string>
    <string name="turnouts_direct_entry_label">Enter Turnout # or name</string>
    <string name="turnouts_location_label">Filter by Location</string>
    <string name="turnouts_list_label">Turnouts (click state to toggle)</string>
    <string name="turnouts_turnout">Turnout</string>
    <string name="location_all">ALL LOCATIONS</string>
    <string name="routes">Routes</string>
    <string name="routes_label">Control Routes</string>
    <string name="routes_direct_entry_label">Enter Route System Name</string>
    <string name="routes_location_label">Filter by Location</string>
    <string name="routes_list_label">Route (click state to activate)</string>
    <string name="consist_lead_label">Lead Loco</string>
    <string name="consist_list_label">Consist Top</string>
    <string name="throw_button">Throw</string>
    <string name="close_button">Close</string>
    <string name="toggle_button">Toggle</string>
    <string name="power_control_label">Control Layout Power Setting</string>
    <string name="power_control_button">unknown</string>
    <string name="press_to_toggle">Press button to toggle layout power state.</string>
    <string name="power_control_not_allowed">Power Control not allowed.  Change in Preferences/Settings on server.</string>
    <string name="reconnect_label">Reconnect Attempt Status</string>
    <string name="reconnect_help">Attempting to Reconnect automatically.  Wait for Reconnection or press BackArrow to Exit.</string>
    <string name="reconnect_success">RECONNECTED.  Resuming normal operation.</string>
    <string name="fs_edit_notice">WARNING: changes to Default Functions Settings will be lost on exit - No SD card found.</string>
    <string name="ca_recent_conn_notice">Recent Connections unavailable - No SD card found.</string>
    <string name="sl_recent_engine_notice">Recent Locos unavailable - No SD card found.</string>
    <string name="power">Power</string>
    <string name="throttle">Throttle</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="set">Set</string>
    <string name="disabled">Disabled</string>
    <string name="volume_indicator">v</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">"Cancel"</string>
    <string name="exit_text">Exit Engine Driver?</string>
    <string name="exit_title">Exit</string>
    <string name="steal_text">Steal address %1$s?</string>
    <string name="steal_title">Steal</string>
    <string name="lightsTextOff">Off</string>
    <string name="lightsTextFollow">Follow Fn Btn</string>
    <string name="lightsTextUnknown">Unknown</string>
    <string name="prefTitle">Preferences</string>
    <string name="prefSummary">Preferences for Engine Driver</string>
    <string name="preferences">Preferences</string>
    <string name="prefSwipeUpDownTitle">Swipe Up-Down Preferences</string>
    <string name="prefSwipeUpDownSummary">Options for swipe Up-Down on the Throttle Screen.</string>
    <string name="prefThrottleNameTitle">Throttle Name</string>
    <string name="prefThrottleNameDefaultValue">Engine Driver</string>
    <string name="prefThrottleNameSummary">Set a name for this device (shown on WiThrottle screen)</string>
    <string name="prefThrottleOrientationTitle">Screen orientation</string>
    <string name="prefThrottleOrientationDefaultValue">Portrait</string>
    <string name="prefThrottleOrientationSummary">Screen orientation (except Web)</string>
    <string name="prefThrottlePageTitle">Throttle Page Appearance Preferences</string>
    <string name="prefThrottleTitle">Throttle Control Preferences</string>
    <string name="prefThrottleStatusTitle">Throttle Page Status Row Preferences</string>
    <string name="prefSliderTitle">Speed Slider and Buttons Preferences</string>
    <string name="prefSliderSummary">Options for Speed Slider and Speed Buttons</string>
    <string name="prefDirectionTitle">Direction button Preferences</string>
    <string name="prefDirectionSummary">Options for the Direction Buttons</string>
    <string name="prefIncreaseSliderHeightTitle">Increase Slider/Speed Height?</string>
    <string name="prefIncreaseSliderHeightSummary">Use a taller slider, or speed buttons, for throttles.</string>
    <string name="prefHideSliderTitle">Hide Speed Slider?</string>
    <string name="prefHideSliderSummary">Do not show speed slider, use speed buttons instead.</string>
    <string name="prefHideSliderAndSpeedButtonsTitle">Hide Slider AND Speed Buttons?</string>
    <string name="prefHideSliderAndSpeedButtonsSummary">Show neither speed slider nor speed buttons.\nNote: Overrides the \'Hide Slider\', \'Slider Height\' and \'Display Speed buttons\' options.</string>
    <string name="prefDirChangeWhileMovingTitle">Direction change while moving?</string>
    <string name="prefDirChangeWhileMovingSummary">Allow direction change when moving.</string>
    <string name="prefMaximumThrottleTitle">Maximum Throttle Percentage</string>
    <string name="prefMaximumThrottleDefaultValue">100</string>
    <string name="prefMaximumThrottleSummary">Maximum Allowed throttle slider value in %</string>
    <string name="prefStopOnReleaseTitle">Stop On Release?</string>
    <string name="prefStopOnReleaseSummary">Stop loco(s) when releasing from throttle</string>
    <string name="prefDefaultAddressLengthTitle">Default Address Length</string>
    <string name="prefDefaultAddressLengthDefaultValue">Auto</string>
    <string name="prefDefaultAddressLengthSummary">Default Loco Address Length, (Auto will set based on # of digits).</string>
    <string name="prefMaximumRecentConnectionsTitle">Maximum Recent Connections</string>
    <string name="prefMaximumRecentConnectionsDefaultValue">10</string>
    <string name="prefMaximumRecentConnectionsSummary">Maximum Recent Connections to show in list</string>
    <string name="prefHardwareSystemTitle">Turnout Hardware System</string>
    <string name="prefHardwareSystemDefaultValue">L</string>
    <string name="prefHardwareSystemSummary">Select hardware system to use for direct entry turnout commands</string>
    <string name="prefHideSystemRouteNamesTitle">Hide Sys Route Names?</string>
    <string name="prefHideSystemRouteNamesSummary">Hide system names for Routes, used to save space on Route list.</string>
    <string name="logViewer">View Log</string>
    <string name="EStop">Estop</string>
    <string name="PowerButtonBar">power_button</string>
    <string name="routes_route">Route System Name</string>
</resources>