<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:key="engine_driver_preference"
   android:title="@string/prefTitle"
   android:summary="@string/prefSummary"
>
   <EditTextPreference
      android:key="throttle_name_preference"
      android:title="@string/prefThrottleNameTitle"
      android:dialogTitle="@string/prefThrottleNameTitle"
      android:defaultValue="@string/prefThrottleNameDefaultValue"
      android:summary="@string/prefThrottleNameSummary"
   >
   </EditTextPreference>
   <CheckBoxPreference
      android:key="stop_on_release_preference"
      android:summary="@string/prefStopOnReleaseSummary"
      android:title="@string/prefStopOnReleaseTitle"
      android:defaultValue="@string/prefStopOnReleaseDefaultValue"
      android:dialogTitle="@string/prefStopOnReleaseTitle"
   >
   </CheckBoxPreference>
   <EditTextPreference
      android:key="maximum_throttle_preference"
      android:summary="@string/prefMaximumThrottleSummary"
      android:title="@string/prefMaximumThrottleTitle"
      android:defaultValue="@string/prefMaximumThrottleDefaultValue"
      android:dialogTitle="@string/prefMaximumThrottleTitle"
      android:numeric="integer"
      android:maxLength="2"
   ></EditTextPreference>
   <ListPreference
      android:key="hardware_system"
      android:title="@string/prefHardwareSystemTitle"
      android:summary="@string/prefHardwareSystemSummary"
      android:defaultValue="@string/prefHardwareSystemDefaultValue"
      android:entries="@array/hardware_system_names"
      android:entryValues="@array/hardware_systems" />
   <ListPreference
      android:key="default_address_length"
      android:title="@string/prefDefaultAddressLengthTitle"
      android:summary="@string/prefDefaultAddressLengthSummary"
      android:defaultValue="@string/prefDefaultAddressLengthDefaultValue"
      android:entries="@array/address_size_defaults"
      android:entryValues="@array/address_size_defaults" />
   <CheckBoxPreference
      android:key="hide_system_route_names_preference"
      android:summary="@string/prefHideSystemRouteNamesSummary"
      android:title="@string/prefHideSystemRouteNamesTitle"
      android:defaultValue="@string/prefHideSystemRouteNamesDefaultValue"
      android:dialogTitle="@string/prefHideSystemRouteNamesTitle"
   >
   </CheckBoxPreference>
   <CheckBoxPreference
      android:key="increase_slider_height_preference"
      android:summary="@string/prefIncreaseSliderHeightSummary"
      android:title="@string/prefIncreaseSliderHeightTitle"
      android:defaultValue="@string/prefIncreaseSliderHeightDefaultValue"
      android:dialogTitle="@string/prefIncreaseSliderHeightTitle"
   >
   </CheckBoxPreference>
   <CheckBoxPreference
      android:key="hide_recent_locos_preference"
      android:summary="@string/prefHideRecentLocosSummary"
      android:title="@string/prefHideRecentLocosTitle"
      android:defaultValue="@string/prefHideRecentLocosDefaultValue"
      android:dialogTitle="@string/prefHideRecentLocosTitle"
   >
   </CheckBoxPreference>
   <EditTextPreference
      android:key="maximum_recent_connections_preference"
      android:summary="@string/prefMaximumRecentConnectionsSummary"
      android:title="@string/prefMaximumRecentConnectionsTitle"
      android:defaultValue="@string/prefMaximumRecentConnectionsDefaultValue"
      android:dialogTitle="@string/prefMaximumRecentConnectionsTitle"
      android:numeric="integer"
      android:maxLength="2"
   ></EditTextPreference>
</PreferenceScreen>