<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/routes_direct_entry_label"
        style="@style/small_heading_style"
        android:text="@string/routes_direct_entry_label" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp" >
        <EditText
            android:id="@+id/route_entry"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:hint="@string/routes_route"
            android:inputType="textCapCharacters"
            android:imeOptions="actionDone"
            android:maxLength="60"
            android:singleLine="true" />
        <Button
            android:id="@+id/route_toggle"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/set"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    <TextView
        android:id="@+id/routes_location_label"
        style="@style/small_heading_style"
        android:text="@string/routes_location_label" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp" >
	    <Spinner
	        android:id="@+id/routes_location"
            android:layout_width="0dip"
	        android:layout_height="49dp"
            android:layout_weight="1.0"
	        android:singleLine="true" />

    </LinearLayout>
    <TextView
        android:id="@+id/routes_list_label"
        style="@style/small_heading_style"
        android:text="@string/routes_list_label" />
    <ListView
        android:id="@+id/routes_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>
</LinearLayout>