<?xml version="1.0" encoding="utf-8"?>
<!--
      Copyright (C) 2010 Jason M'Sadoques jlyonm@gmail.com This program is free
      software; you can redistribute it and/or modify it under the terms of the
      GNU General Public License as published by the Free Software Foundation;
      either version 3 of the License, or (at your option) any later version.

      This program is distributed in the hope that it will be useful, but
      WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
      or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
      for more details. You should have received a copy of the GNU General
      Public License along with this program; if not, write to the Free Software
      Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ip_label"
            style="@style/floating_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_ip" />

        <EditText
            android:id="@+id/host_ip"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ip_label"
            android:maxLength="60"
            android:singleLine="true" />

        <EditText
            android:id="@+id/port"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/host_ip"
            android:layout_toRightOf="@id/host_ip"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true" />

        <TextView
            style="@style/floating_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/port"
            android:layout_alignLeft="@id/port"
            android:text="@string/port" />

        <Button
            android:id="@+id/connect"
            style="@style/normal_button_style"
            android:layout_width="fill_parent"
            android:layout_alignBottom="@id/port"
            android:layout_toRightOf="@id/port"
            android:text="@string/connect_button" />
    </RelativeLayout>

    <TextView
        style="@style/small_heading_style"
        android:text="@string/discovered_services" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="#00000000"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/discovery_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:footerDividersEnabled="true" >
        </ListView>
    </LinearLayout>

    <TextView
        style="@style/small_heading_style"
        android:text="@string/recent_connections" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="#00000000"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/connections_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:footerDividersEnabled="true" >
        </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/ca_footer"
        style="@style/floating_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none" />

</LinearLayout>