<?xml version="1.0" encoding="utf-8"?>
   <!--
      Copyright (C) 2010 Jason M'Sadoques jlyonm@gmail.com This program is free
      software; you can redistribute it and/or modify it under the terms of the
      GNU General Public License as published by the Free Software Foundation;
      either version 3 of the License, or (at your option) any later version.

      This program is distributed in the hope that it will be useful, but
      WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
      or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
      for more details. You should have received a copy of the GNU General
      Public License along with this program; if not, write to the Free Software
      Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
   -->

<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/select_loco_screen"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
>
   <LinearLayout
      android:id="@+id/current_locos_group_w_header"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
   >
      <TextView
         android:id="@+id/current_locos_header"
         android:text="@string/current_locos"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
         android:background="#8c8a8c" />
      <LinearLayout
         android:id="@+id/current_locos_row"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingTop="2dp"
      >
         <TextView
            android:id="@+id/sl_loco_T"
            android:text="@string/none"
            android:gravity="center"
            android:padding="0dp"
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:ellipsize="end" />
         <Button
            android:id="@+id/sl_release_T"
            android:text="@string/release"
            android:layout_height="wrap_content"
            style="@style/normal_button" 
            />
         <TextView
            android:id="@+id/sl_loco_S"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:padding="0dp"
            android:paddingLeft="6dp"
            android:text="@string/none"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:ellipsize="end" />
         <Button
            android:id="@+id/sl_release_S"
            android:text="@string/release"
            android:layout_height="wrap_content"
            style="@style/normal_button" />

      </LinearLayout>
   </LinearLayout>
   <RelativeLayout
      android:id="@+id/enter_loco_group"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingTop="2dp"
      android:paddingBottom="2dp"
   >
      <TextView
         android:id="@+id/select_loco_label"
         android:text="@string/select_loco"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
         android:background="#8c8a8c" />
      <EditText
         android:id="@+id/loco_address"
         android:layout_width="80sp"
         android:layout_height="wrap_content"
         android:layout_below="@id/select_loco_label"
         android:singleLine="true"
         android:inputType="number"
         android:maxLength="4" 
         android:shadowColor="#FFFFFFFF"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="0.2"
         />
      <Spinner
         android:id="@+id/address_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/loco_address"
         android:layout_alignBottom="@id/loco_address" 
         />
      <Button
         android:id="@+id/acquire"
         android:text="@string/acquire_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/address_length"
         android:layout_alignBottom="@id/address_length"
         android:layout_below="@id/select_loco_label"
         android:enabled="false" 
         style="@style/normal_button" />
   </RelativeLayout>
   <TextView
      android:id="@+id/roster_list_heading"
      android:text="@string/roster_list"
      android:textColor="#FFFFFF"
      android:background="#8c8a8c"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
   <ListView
      android:id="@+id/roster_list"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="0.6"
   >
   </ListView>
   <TextView
      android:id="@+id/recent_engines_heading"
      android:text="@string/recent_engines"
      android:textColor="#FFFFFF"
      android:background="#8c8a8c"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
   <ListView
      android:id="@+id/engine_list"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="0.4"
   >
   </ListView>
   <TextView
      android:id="@+id/sl_footer"
      android:text="@string/none"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
</LinearLayout>
